src/objects/SFDC_Plan2User__c.object
<CustomObject>
    <description>**This is not used and can be repurposed.  If it is repurposed take off the connection to HR and use a connection to User object instead.  Connector object that ties an Account Plan to a User.
(Was part of a managed package that wasn&apos;t used)</description>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <formula>Team_Member__r.Phone__c + &quot;&quot; +  User__r.Email</formula>
        <inlineHelpText>From HR data</inlineHelpText>
        <label>Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>User__r.City + &quot;, &quot; +  User__r.State + &quot;, &quot; +  User__r.Country</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Text__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Global Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>R00N60000001PRPZEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Plan2User</relationshipLabel>
        <relationshipName>Team_Member</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001PRPbEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan2User</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Planning Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan2User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>